barservice/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:9001",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "local_service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "local_service"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "both",
                "name": "health_check",
                "config": {
                  "pass_through_mode": true, "endpoint": "/healthcheck"
                }
              },
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:9211",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "egress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "foo_egress",
                  "domains": ["foo.rtrdc.net"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "foo"
                    }
                  ]
                },
                {
                  "name": "bar_egress",
                  "domains": ["bar.rtrdc.net"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "bar"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/tmp/envoy-access-log",
    "address": "tcp://127.0.0.1:8001"
  },
  "cluster_manager": {
    "sds": {
      "cluster": {
        "name": "rtr-sds",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://discovery.rtrdc.net:8080"}]
      },
      "refresh_delay_ms": 15000      
    },
    "clusters": [
      {
        "name": "local_service",
        "connect_timeout_ms": 250,
        "type": "static",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://127.0.0.1:8080"}]
      },
      {
        "name": "foo",
        "connect_timeout_ms": 250,
        "type": "sds",
        "service_name": "foo",
        "lb_type": "round_robin",
        "health_check": {
          "type": "http",
          "timeout_ms": 100,
          "interval_ms": 1000,
          "unhealthy_threshold": 3,
          "healthy_threshold": 2,
          "path":"/healthcheck",
          "interval_jitter_ms": 250,
          "service_name": "foo"
        }
      },
      {
        "name": "bar",
        "connect_timeout_ms": 250,
        "type": "sds",
        "service_name": "bar",
        "lb_type": "round_robin",
        "health_check": {
          "type": "http",
          "timeout_ms": 100,
          "interval_ms": 1000,
          "unhealthy_threshold": 3,
          "healthy_threshold": 2,
          "path":"/healthcheck",
          "interval_jitter_ms": 250,
          "service_name": "bar"
        }
      }
    ]
  }
}
